force-app/main/default/objects/FAQ__c/FAQ__c.object-meta.xml
<CustomObject>
    <description>Frequently Asked Questions</description>
    <label>FAQ</label>
    <nameField>
        <label>FAQ Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>