force-app/main/default/objects/FAQ__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Proposed Answer</description>
    <inlineHelpText>Proposed Answer</inlineHelpText>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>