force-app/main/default/objects/FAQ__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>What category does this question belong to?</description>
    <inlineHelpText>What category does this question belong to?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>REPs</fullName>
            </value>
            <value>
                <fullName>About TrueCost</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Glossary</fullName>
            </value>
            <value>
                <fullName>Switching</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CenterPoint Energy</fullName>
            </value>
            <value>
                <fullName>Texas Electric Market</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>SourceGas Information</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Pricing and Fees</fullName>
            </value>
            <value>
                <fullName>Switching Electric Companies</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Natural Gas Basics</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>