force-app/main/default/objects/FAQ__c/fields/CorpComm_Editing__c.field-meta.xml
<CustomField>
    <fullName>CorpComm_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CorpComm Editing</label>
    <type>Checkbox</type>
</CustomField>