force-app/main/default/objects/FAQ__c/fields/Draft_Answer__c.field-meta.xml
<CustomField>
    <fullName>Draft_Answer__c</fullName>
    <description>Proposed change to the Answer to the Question.  This stays hidden until the approval process completes.</description>
    <inlineHelpText>Proposed change to the Answer to the Question.  This stays hidden until the approval process completes.</inlineHelpText>
    <label>Draft Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>