force-app/main/default/objects/FAQ__c/fields/Draft_Question__c.field-meta.xml
<CustomField>
    <fullName>Draft_Question__c</fullName>
    <description>If you&#39;d like to rewrite the question for this FAQ, use this field.  The actual question field for a published FAQ cannot be edited without legal review.</description>
    <inlineHelpText>If you&#39;d like to rewrite the question for this FAQ, use this field.  The actual question field for a published FAQ cannot be edited without legal review.</inlineHelpText>
    <label>Draft Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>