force-app/main/default/objects/FAQ__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this FAQ allowed on the TrueCost website?</description>
    <inlineHelpText>Is this FAQ allowed on the TrueCost website?</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>