force-app/main/default/objects/FAQ__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Question that you&#39;d like to add</description>
    <inlineHelpText>Question that you&#39;d like to add</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>