force-app/main/default/objects/FAQ__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This internal FAQ has been reviewed by Corporate Communications</description>
    <inlineHelpText>This internal FAQ has been reviewed by Corporate Communications</inlineHelpText>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>