force-app/main/default/objects/FAQ__c/fields/run_copy_trigger__c.field-meta.xml
<CustomField>
    <fullName>run_copy_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System only field that tells trigger to copy draft content to production.</description>
    <inlineHelpText>System only field that tells trigger to copy draft content to production.</inlineHelpText>
    <label>run copy trigger</label>
    <type>Checkbox</type>
</CustomField>