force-app/main/default/objects/FAQ__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>IF(  Public__c , 
if( AND(CorpComm_Editing__c, Legal_Editing__c, Final_Review__c ) , &quot;Update Final Review&quot;, 
if( AND(CorpComm_Editing__c, Legal_Editing__c), &quot;Update Legal&quot;, 
if(CorpComm_Editing__c, &quot;Update Communications&quot;, &quot;Published&quot;))), 




if( AND(CorpComm_Editing__c, Legal_Editing__c, Final_Review__c ) , &quot;New Content Final Review&quot;, 
if( AND(CorpComm_Editing__c, Legal_Editing__c), &quot;New Content Legal Review&quot;, 
if(CorpComm_Editing__c, &quot;New Content Communications Review&quot;, &quot;New Content Draft&quot;))) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>