force-app/main/default/objects/FAQ__c/fields/Top_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Top_FAQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Top FAQs display on the home FAQ page instead in addition to being found underneath their category</description>
    <inlineHelpText>Top FAQs display on the home FAQ page instead in addition to being found underneath their category</inlineHelpText>
    <label>Top FAQ</label>
    <type>Checkbox</type>
</CustomField>