force-app/main/default/objects/FAQ__c/recordTypes/Gas_Choice_FAQ.recordType-meta.xml
<RecordType>
    <fullName>Gas_Choice_FAQ</fullName>
    <active>true</active>
    <label>Gas Choice FAQ</label>
</RecordType>