force-app/main/default/objects/FAQ__c/recordTypes/TrueCost_FAQ.recordType-meta.xml
<RecordType>
    <fullName>TrueCost_FAQ</fullName>
    <active>true</active>
    <label>TrueCost FAQ</label>
</RecordType>