force-app/main/default/objects/FAQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Top_FAQ__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>