force-app/main/default/objects/FAQ__c/listViews/All_Gas_Choice.listView-meta.xml
<ListView>
    <fullName>All_Gas_Choice</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Top_FAQ__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FAQ__c.Gas_Choice_FAQ</value>
    </filters>
    <label>All Gas Choice</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>