force-app/main/default/objects/FAQ__c/listViews/All_TrueCost.listView-meta.xml
<ListView>
    <fullName>All_TrueCost</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Top_FAQ__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FAQ__c.TrueCost_FAQ</value>
    </filters>
    <label>All TrueCost</label>
    <language>en_US</language>
</ListView>