force-app/main/default/objects/FAQ__c/listViews/CorpCommEditing_FAQ.listView-meta.xml
<ListView>
    <fullName>CorpCommEditing_FAQ</fullName>
    <filterScope>Queue</filterScope>
    <label>CorpComm Editing</label>
    <queue>CorpCommEditing</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>