force-app/main/default/objects/FAQ__c/listViews/FAQ_by_Category.listView-meta.xml
<ListView>
    <fullName>FAQ_by_Category</fullName>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>FAQ by Category</label>
</ListView>