force-app/main/default/objects/FAQ__c/listViews/FinalReview_FAQ.listView-meta.xml
<ListView>
    <fullName>FinalReview_FAQ</fullName>
    <filterScope>Queue</filterScope>
    <label>Final Review</label>
    <queue>FinalReview</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>