force-app/main/default/objects/FAQ__c/listViews/Legal_Review.listView-meta.xml
<ListView>
    <fullName>Legal_Review</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CorpComm_Editing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Legal_Editing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Final_Review__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Legal Review</label>
    <sharedTo>
        <group>Content_Editing</group>
    </sharedTo>
</ListView>