force-app/main/default/objects/FAQ__c/listViews/LegalReview_FAQ.listView-meta.xml
<ListView>
    <fullName>LegalReview_FAQ</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Review</label>
    <queue>LegalReview</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>