force-app/main/default/objects/FAQ__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <label>Published</label>
</ListView>