force-app/main/default/objects/FAQ__c/listViews/TrueCost_Switching_Electric_Companies.listView-meta.xml
<ListView>
    <fullName>TrueCost_Switching_Electric_Companies</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Reviewed__c</columns>
    <columns>Top_FAQ__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Switching Electric Companies</value>
    </filters>
    <label>TrueCost - Switching Electric Companies</label>
    <language>en_US</language>
</ListView>